# agorski_sound_demixing

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/diffusion_model/: dataset.yaml  training.yaml
configs/gan/: config.yaml
configs/training/: accompaniment-vocals,resunet.yaml  accompaniment-vocals,resunet_ismir2021.yaml  accompaniment-vocals,resunet_subbandtime.yaml  accompaniment-vocals,unet.yaml  vocals-accompaniment,resunet.yaml  vocals-accompaniment,resunet_ismir2021.yaml  vocals-accompaniment,resunet_subbandtime.yaml  vocals-accompaniment,unet.yaml  vocals-accompaniment,unet_subbandtime.yaml  vocals-bass-drums-other,unet.yaml
notebooks/: load_statistics.ipynb  test_evaluate.ipynb
pipelines/: data.dvc  pyproject.toml
pipelines/conf/base/: catalog.yml  logging.yml  parameters.yml
pipelines/src/: setup.py
pipelines/src/pipelines/: .env.example  __init__.py  __main__.py  pipeline_registry.py  settings.py
pipelines/src/pipelines/callbacks/: __init__.py
pipelines/src/pipelines/dataset/: base_dataset.py  data_module.py
pipelines/src/pipelines/diffusion_models/: data.py  data_validation.py  differential.py  evaluate.py  metrics.py  model.py  utils.py
pipelines/src/pipelines/diffusion_models/config/: dataset.py  training.py
pipelines/src/pipelines/diffusion_models/configs/: dataset.py  model.py
pipelines/src/pipelines/gan/: config.py  datanum_pb2.py  utils.py
pipelines/src/pipelines/inference/: separate.py
pipelines/src/pipelines/loss/: __init__.py  loss.py
pipelines/src/pipelines/models/: __init__.py  augementor.py  convtasnet.py  gan.py  hdemucs.py  lstm.py  mobilenet_subbandtime.py  pqmf.py  resunet143_decoupleplusinplaceabn_ismir2021.py  resunet143_subbandtime.py  separator.py  unet.py  unet_base.py  unet_subbandtime.py  vae.py
pipelines/src/pipelines/types/: prepare_signal.py  prepare_spectrogram.py  signal.py  training_signal_enriched.py  training_spectrogram.py  training_waveform.py
pipelines/src/pipelines/utils/: __init__.py  dirs.py  hdf5.py  loss.py  pitch.py  process_audio.py  process_signals.py  process_spectrogram.py  sample.py  statistics.py  train_script.py  train_signal_enriched.py  training.py  training_spectrogram.py  training_waveform.py
pipelines/src/tests/: conftest.py  test_run.py
scripts/: 02_install_gpu.sh  04_build_install_package.sh  05_convert_to_hdf5.py  06_prepare_indexes.py  07_prepare_evaluation_audios.sh  08_train.py  09_separate.py  1_install_gpu.sh  2_install_inplace_abn.sh  3_install_poetry.sh  4_convert_to_hdf5.py  7_train.py
scripts/diffusion_models/: 00_download_data.sh  01_prepare_data.py  02_train.py
scripts/gan/: 01_setup_environment.sh  03_build_install_package.sh  04_prepare_data.py  05_train.py  05_train_evaluate.py
(+46 files in other folders)
