[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["a-s-gorski <adamsebastiangorski@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pipelines", from="pipelines/src"}
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.9.2"
librosa = "0.10.2"
museval = "0.4.0"
h5py = "3.12.1"
pytorch-lightning = "1.2.1"
musdb = "0.4.0"
tqdm = "4.66.5"
ipykernel = "6.29.5"
torchlibrosa = "0.0.9"
torch = "2.4.1"
torchaudio = "2.4.1"
torchvision = "0.19.1"
numpy = "=1.26.4"
autopep8 = "^2.3.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
